// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpgradeButton snapshot can upgrade 1`] = `
<ActionButton
  as="a"
  disabled={false}
  href="upgradeUrl"
  iconBefore={[MockFunction icons.Locked]}
  onClick={[MockFunction trackUpgradeClick]}
  variant="outline-primary"
>
  Upgrade
</ActionButton>
`;

exports[`UpgradeButton snapshot cannot upgrade 1`] = `
<ActionButton
  disabled={true}
  iconBefore={[MockFunction icons.Locked]}
  onClick={[MockFunction trackUpgradeClick]}
  variant="outline-primary"
>
  Upgrade
</ActionButton>
`;

exports[`UpgradeButton snapshot masquerading 1`] = `
<ActionButton
  disabled={true}
  iconBefore={[MockFunction icons.Locked]}
  onClick={[MockFunction trackUpgradeClick]}
  variant="outline-primary"
>
  Upgrade
</ActionButton>
`;
